# backend/src/flow/flow.controller.ts
@@ -1,12 +1,14 @@
 import { Controller, Get } from "@nestjs/common";
 import { FlowGatewayService } from "./services/flow-gateway.service";
 import { FlowEmulatorService } from "./services/flow-emulator.service";
+import { FlowCliService } from "./services/flow-cli.service";
 
 @Controller("flow")
 export class FlowController {
   constructor (
     private flowGatewayService: FlowGatewayService,
     private flowEmulatorService: FlowEmulatorService,
+    private flowCliService: FlowCliService,
   ) {}
 
   @Get("status")
@@ -20,5 +22,10 @@ export class FlowController {
         status: this.flowEmulatorService.state
       }
     };
+  }
+
+  @Get("version")
+  async getVersion() {
+    return this.flowCliService.version();
   }
 }
